--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# HEY GUYS, DO NOT TOUCH PLEASE, we need this :)
+# HEY GUYS, DO NOT TOUCH PLEASE, we need this :(
 
 # Byte-compiled Python scripts
 __pycache__/
