Added bot typing indicator. Added some project description

--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "main": "app.js",
   "scripts": {
     "start": "electron .",
-    "pkg-win": "electron-packager . the-procrastinators --overwrite --platform=win32 --arch=ia32 --icon=app/img/favicon.ico --prune=true --out=release_builds",
-    "pkg-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=app/img/favicon.ico --prune=true --out=release_builds",
-    "pkg-lin": "electron-packager . the-procrastinators --overwrite --platform=linux --arch=x64 --icon=app/img/favicon.ico --prune=true --out=release_builds"
+    "pkg-win": "electron-packager . the-procrastinators --overwrite --platform=win32 --arch=ia32 --icon=app/img/icon.png --prune=true --out=release_builds",
+    "pkg-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=app/img/icon.png --prune=true --out=release_builds",
+    "pkg-lin": "electron-packager . the-procrastinators --overwrite --platform=linux --arch=x64 --icon=app/img/icon.png --prune=true --out=release_builds"
   },
   "devDependencies": {
     "electron": "^12.0.1",
-    "electron-packager": "^15.2.0"
+    "electron-packager": "^15.2.0",
+    "opn": "^6.0.0"
   }
 }
