--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   "main": "app.js",
   "scripts": {
     "start": "electron .",
-    "pkg-win": "electron-packager . the-procrastinators --overwrite --platform=win32 --arch=ia32 --icon=app/img/icon.png --prune=true --out=release_builds",
-    "pkg-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=app/img/icon.png --prune=true --out=release_builds",
+    "pkg-win": "electron-packager . the-procrastinators --overwrite --platform=win32 --arch=ia32 --icon=app/img/icon.ico --prune=true --out=release_builds",
+    "pkg-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=app/img/icon.icns --prune=true --out=release_builds",
     "pkg-lin": "electron-packager . the-procrastinators --overwrite --platform=linux --arch=x64 --icon=app/img/icon.png --prune=true --out=release_builds"
   },
+  "dependencies": {
+    "babylonjs-loaders": "^4.2.0"
+  },
   "devDependencies": {
+    "babylonjs": "^4.2.0",
     "electron": "^12.0.1",
     "electron-packager": "^15.2.0",
     "opn": "^6.0.0"
