--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "pkg-lin": "electron-packager . the-procrastinators --overwrite --platform=linux --arch=x64 --icon=app/img/icon.png --prune=true --out=release_builds"
   },
   "dependencies": {
-    "babylonjs-loaders": "^4.2.0"
+    "babylonjs-loaders": "^4.2.0",
+    "opn": "^6.0.0"
   },
   "devDependencies": {
     "babylonjs": "^4.2.0",
     "electron": "^12.0.1",
-    "electron-packager": "^15.2.0",
-    "opn": "^6.0.0"
+    "electron-packager": "^15.2.0"
   }
 }
